// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`wpp-list-item renders component 1`] = `
<wpp-list-item class="wpp-list-item wpp-mounted" exportparts="item, info-wrapper, checkbox, body-wrapper, left, label, caption, right, left-wrapper, label-wrapper, caption-wrapper, right-wrapper" highlight="" label="" role="presentation" tabindex="0">
  <mock:shadow-root>
    <ul class="ul-wrapper" part="ul-wrapper">
      <li class="item" part="item">
        <div class="info-wrapper" part="info-wrapper">
          <div class="left slot-hidden" part="left-wrapper">
            <slot name="left" part="left"></slot>
          </div>
          <div class="body-wrapper" part="body-wrapper" style="width: auto;">
            <div class="label" part="label-wrapper">
              <slot name="label" part="label"></slot>
            </div>
            <div class="caption slot-hidden" part="caption-wrapper">
              <slot name="caption" part="caption"></slot>
            </div>
          </div>
        </div>
        <div class="right slot-hidden" part="right-wrapper">
          <slot name="right" part="right"></slot>
        </div>
      </li>
    </ul>
  </mock:shadow-root>
  <p slot="label">
    Text
  </p>
</wpp-list-item>
`;

exports[`wpp-list-item renders component with label and avatar 1`] = `
<wpp-list-item class="wpp-list-item wpp-mounted" exportparts="item, info-wrapper, checkbox, body-wrapper, left, label, caption, right, left-wrapper, label-wrapper, caption-wrapper, right-wrapper" highlight="" label="" role="presentation" tabindex="0">
  <mock:shadow-root>
    <ul class="ul-wrapper" part="ul-wrapper">
      <li class="item" part="item">
        <div class="info-wrapper" part="info-wrapper">
          <div class="left" part="left-wrapper">
            <slot name="left" part="left"></slot>
          </div>
          <div class="body-wrapper" part="body-wrapper" style="width: auto;">
            <div class="label" part="label-wrapper">
              <slot name="label" part="label"></slot>
            </div>
            <div class="caption slot-hidden" part="caption-wrapper">
              <slot name="caption" part="caption"></slot>
            </div>
          </div>
        </div>
        <div class="right slot-hidden" part="right-wrapper">
          <slot name="right" part="right"></slot>
        </div>
      </li>
    </ul>
  </mock:shadow-root>
  <p slot="label">
    Text
  </p>
  <wpp-avatar size="s" slot="left" src="https://cdna.artstation.com/p/assets/images/images/004/966/196/large/hossein-diba-1.jpg?1487536028"></wpp-avatar>
</wpp-list-item>
`;

exports[`wpp-list-item renders component with label and caption 1`] = `
<wpp-list-item class="wpp-list-item wpp-mounted" exportparts="item, info-wrapper, checkbox, body-wrapper, left, label, caption, right, left-wrapper, label-wrapper, caption-wrapper, right-wrapper" highlight="" label="" role="presentation" tabindex="0">
  <mock:shadow-root>
    <ul class="ul-wrapper" part="ul-wrapper">
      <li class="item with-caption" part="item">
        <div class="info-wrapper" part="info-wrapper">
          <div class="left slot-hidden" part="left-wrapper">
            <slot name="left" part="left"></slot>
          </div>
          <div class="body-wrapper" part="body-wrapper" style="width: auto;">
            <div class="label" part="label-wrapper">
              <slot name="label" part="label"></slot>
            </div>
            <div class="caption" part="caption-wrapper">
              <slot name="caption" part="caption"></slot>
            </div>
          </div>
        </div>
        <div class="right slot-hidden" part="right-wrapper">
          <slot name="right" part="right"></slot>
        </div>
      </li>
    </ul>
  </mock:shadow-root>
  <p slot="label">
    Text
  </p>
  <p slot="caption">
    Caption
  </p>
</wpp-list-item>
`;

exports[`wpp-list-item renders component with label and checkbox 1`] = `
<wpp-list-item class="wpp-list-item wpp-mounted" exportparts="item, info-wrapper, checkbox, body-wrapper, left, label, caption, right, left-wrapper, label-wrapper, caption-wrapper, right-wrapper" highlight="" label="" multiple="" role="presentation" tabindex="0">
  <mock:shadow-root>
    <ul class="ul-wrapper" part="ul-wrapper">
      <li class="item multiple" part="item">
        <div class="info-wrapper" part="info-wrapper">
          <wpp-checkbox internalstate="" name="wpp-list-item-checkbox" part="checkbox"></wpp-checkbox>
          <div class="body-wrapper" part="body-wrapper" style="width: auto;">
            <div class="label" part="label-wrapper">
              <slot name="label" part="label"></slot>
            </div>
            <div class="caption slot-hidden" part="caption-wrapper">
              <slot name="caption" part="caption"></slot>
            </div>
          </div>
        </div>
        <div class="right slot-hidden" part="right-wrapper">
          <slot name="right" part="right"></slot>
        </div>
      </li>
    </ul>
  </mock:shadow-root>
  <p slot="label">
    Text
  </p>
</wpp-list-item>
`;

exports[`wpp-list-item renders component with label and chevron 1`] = `
<wpp-list-item class="wpp-list-item wpp-mounted" exportparts="item, info-wrapper, checkbox, body-wrapper, left, label, caption, right, left-wrapper, label-wrapper, caption-wrapper, right-wrapper" highlight="" label="" role="presentation" tabindex="0">
  <mock:shadow-root>
    <ul class="ul-wrapper" part="ul-wrapper">
      <li class="item" part="item">
        <div class="info-wrapper" part="info-wrapper">
          <div class="left slot-hidden" part="left-wrapper">
            <slot name="left" part="left"></slot>
          </div>
          <div class="body-wrapper" part="body-wrapper" style="width: auto;">
            <div class="label" part="label-wrapper">
              <slot name="label" part="label"></slot>
            </div>
            <div class="caption slot-hidden" part="caption-wrapper">
              <slot name="caption" part="caption"></slot>
            </div>
          </div>
        </div>
        <div class="right" part="right-wrapper">
          <slot name="right" part="right"></slot>
        </div>
      </li>
    </ul>
  </mock:shadow-root>
  <p slot="label">
    Text
  </p>
  <wpp-icon-chevron slot="right"></wpp-icon-chevron>
</wpp-list-item>
`;

exports[`wpp-list-item renders component with label, caption and checkbox with checked state 1`] = `
<wpp-list-item checked="" class="wpp-list-item wpp-mounted" exportparts="item, info-wrapper, checkbox, body-wrapper, left, label, caption, right, left-wrapper, label-wrapper, caption-wrapper, right-wrapper" highlight="" label="" multiple="" role="presentation" tabindex="0">
  <mock:shadow-root>
    <ul class="ul-wrapper" part="ul-wrapper">
      <li class="checked item multiple with-caption" part="item">
        <div class="info-wrapper" part="info-wrapper">
          <wpp-checkbox checked="" internalstate="" name="wpp-list-item-checkbox" part="checkbox"></wpp-checkbox>
          <div class="body-wrapper" part="body-wrapper" style="width: auto;">
            <div class="label" part="label-wrapper">
              <slot name="label" part="label"></slot>
            </div>
            <div class="caption" part="caption-wrapper">
              <slot name="caption" part="caption"></slot>
            </div>
          </div>
        </div>
        <div class="right slot-hidden" part="right-wrapper">
          <slot name="right" part="right"></slot>
        </div>
      </li>
    </ul>
  </mock:shadow-root>
  <p slot="label">
    Text
  </p>
  <p slot="caption">
    Caption
  </p>
</wpp-list-item>
`;
